--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -7,16 +7,15 @@
         <section>
             <div class="show-table-wrapper">
             <table>
-                <thead class="show-header">
-                    <tr>
+                <thead>
+                    <tr class="show-header">
                         <th>Song</th>
                         <th>Artist</th>
                         <th>Genre</th>
                     </tr>
                 </thead>
-                    <tbody class="show-body"></tbody>
-
-                    <tr>
+                    <tbody>
+                    <tr class="show-body">
                         <td><%= song.song %></td>
                         <td><%= song.artist %></td>
                         <td><%= song.genre %></td>
